# dreamhomeestate

./: .env.example  .env.production.example  .gitignore  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pytest.ini  ruff.toml
docs/: architecture.md  data-model.md  deployment.md  implementation-checklist.md  social-provider-architecture.md
nginx/: dreamhomeestate.conf  dreamhomeestate.ssl.conf
services/api/: Dockerfile  Dockerfile.prod  MIGRATIONS.md  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
services/api/alembic/: env.py
services/api/alembic/versions/: 001_initial.py  9887137cd051_add_publication_models.py  a1f2e3d4c5b6_add_account_overrides_to_publication_campaigns.py  b2c3d4e5f6a7_create_audit_log.py  c76aa492181a_add_listings_and_listing_media.py  cd5c15137ea6_add_social_accounts_and_encrypted_oauth_.py  ddc5992a4316_add_listing_versions_and_content_.py  e8f9a0b1c2d3_quick_post_media_library.py  f9a0b1c2d3e4_add_content_items_to_publication_jobs.py
services/api/app/: cli.py  config.py  database.py  dependencies.py  logging_config.py  main.py  models.py  security.py
services/api/app/connectors/: __init__.py  base.py  instagram.py  mock.py  registry.py  x.py
services/api/app/middleware/: __init__.py  csrf.py  error_handler.py  ratelimit.py  security.py
services/api/app/repositories/: __init__.py  audit.py  content.py  encrypted_credentials.py  listing.py  listing_media.py  organization.py  publication.py  session_repo.py  social_account.py  user.py
services/api/app/routers/: __init__.py  audit.py  auth.py  content.py  feature_flags.py  health.py  listing_media.py  listings.py  media_library.py  organizations.py  public.py  publications.py  social_accounts.py  users.py  webhooks.py
services/api/app/schemas/: __init__.py  audit.py  auth.py  content.py  listing.py  listing_media.py  organization.py  publication.py  social_account.py  user.py  webhook.py
services/api/app/services/: audit.py  content_builder.py  content_renderer.py  encryption.py  error_monitor.py  feature_flags.py  lock.py  media_service.py  oauth_state.py  publication.py  webhook_validator.py
services/api/app/worker/: __init__.py  celery_app.py  tasks.py
tests/: conftest.py
(+77 files in other folders)
